QtBeef/src/Qt/qpixmap.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QPixmap
// --------------------------------------------------------------
[CRepr]
struct QPixmap_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QPixmap_new")]
	public static extern QPixmap_Ptr QPixmap_new();
	[LinkName("QPixmap_new2")]
	public static extern QPixmap_Ptr QPixmap_new2(c_int w, c_int h);
	[LinkName("QPixmap_new3")]
	public static extern QPixmap_Ptr QPixmap_new3(void** param1);
	[LinkName("QPixmap_new4")]
	public static extern QPixmap_Ptr QPixmap_new4(libqt_string fileName);
	[LinkName("QPixmap_new5")]
	public static extern QPixmap_Ptr QPixmap_new5(c_char** xpm);
	[LinkName("QPixmap_new6")]
	public static extern QPixmap_Ptr QPixmap_new6(void** param1);
	[LinkName("QPixmap_new7")]
	public static extern QPixmap_Ptr QPixmap_new7(libqt_string fileName, c_char* format);
	[LinkName("QPixmap_new8")]
	public static extern QPixmap_Ptr QPixmap_new8(libqt_string fileName, c_char* format, void* flags);
	[LinkName("QPixmap_Delete")]
	public static extern void QPixmap_Delete(QPixmap_Ptr self);
	[LinkName("QPixmap_OperatorAssign")]
	public static extern void QPixmap_OperatorAssign(void* self, void** param1);
	[LinkName("QPixmap_Swap")]
	public static extern void QPixmap_Swap(void* self, void** other);
	[LinkName("QPixmap_ToQvariant")]
	public static extern void* QPixmap_ToQvariant(void* self);
	[LinkName("QPixmap_IsNull")]
	public static extern bool QPixmap_IsNull(void* self);
	[LinkName("QPixmap_DevType")]
	public static extern c_int QPixmap_DevType(void* self);
	[LinkName("QPixmap_Width")]
	public static extern c_int QPixmap_Width(void* self);
	[LinkName("QPixmap_Height")]
	public static extern c_int QPixmap_Height(void* self);
	[LinkName("QPixmap_Size")]
	public static extern void* QPixmap_Size(void* self);
	[LinkName("QPixmap_Rect")]
	public static extern void* QPixmap_Rect(void* self);
	[LinkName("QPixmap_Depth")]
	public static extern c_int QPixmap_Depth(void* self);
	[LinkName("QPixmap_DefaultDepth")]
	public static extern c_int QPixmap_DefaultDepth();
	[LinkName("QPixmap_Fill")]
	public static extern void QPixmap_Fill(void* self);
	[LinkName("QPixmap_Mask")]
	public static extern void* QPixmap_Mask(void* self);
	[LinkName("QPixmap_SetMask")]
	public static extern void QPixmap_SetMask(void* self, void** mask);
	[LinkName("QPixmap_DevicePixelRatio")]
	public static extern double QPixmap_DevicePixelRatio(void* self);
	[LinkName("QPixmap_SetDevicePixelRatio")]
	public static extern void QPixmap_SetDevicePixelRatio(void* self, double scaleFactor);
	[LinkName("QPixmap_DeviceIndependentSize")]
	public static extern void* QPixmap_DeviceIndependentSize(void* self);
	[LinkName("QPixmap_HasAlpha")]
	public static extern bool QPixmap_HasAlpha(void* self);
	[LinkName("QPixmap_HasAlphaChannel")]
	public static extern bool QPixmap_HasAlphaChannel(void* self);
	[LinkName("QPixmap_CreateHeuristicMask")]
	public static extern void* QPixmap_CreateHeuristicMask(void* self);
	[LinkName("QPixmap_CreateMaskFromColor")]
	public static extern void* QPixmap_CreateMaskFromColor(void* self, void** maskColor);
	[LinkName("QPixmap_Scaled")]
	public static extern void* QPixmap_Scaled(void* self, c_int w, c_int h);
	[LinkName("QPixmap_Scaled2")]
	public static extern void* QPixmap_Scaled2(void* self, void** s);
	[LinkName("QPixmap_ScaledToWidth")]
	public static extern void* QPixmap_ScaledToWidth(void* self, c_int w);
	[LinkName("QPixmap_ScaledToHeight")]
	public static extern void* QPixmap_ScaledToHeight(void* self, c_int h);
	[LinkName("QPixmap_Transformed")]
	public static extern void* QPixmap_Transformed(void* self, void** param1);
	[LinkName("QPixmap_TrueMatrix")]
	public static extern void* QPixmap_TrueMatrix(void** m, c_int w, c_int h);
	[LinkName("QPixmap_ToImage")]
	public static extern void* QPixmap_ToImage(void* self);
	[LinkName("QPixmap_FromImage")]
	public static extern void* QPixmap_FromImage(void** image);
	[LinkName("QPixmap_FromImageReader")]
	public static extern void* QPixmap_FromImageReader(void** imageReader);
	[LinkName("QPixmap_Load")]
	public static extern bool QPixmap_Load(void* self, libqt_string fileName);
	[LinkName("QPixmap_LoadFromData")]
	public static extern bool QPixmap_LoadFromData(void* self, c_uchar* buf, c_uint lenVal);
	[LinkName("QPixmap_LoadFromData2")]
	public static extern bool QPixmap_LoadFromData2(void* self, void** data);
	[LinkName("QPixmap_Save")]
	public static extern bool QPixmap_Save(void* self, libqt_string fileName);
	[LinkName("QPixmap_Save2")]
	public static extern bool QPixmap_Save2(void* self, void** device);
	[LinkName("QPixmap_ConvertFromImage")]
	public static extern bool QPixmap_ConvertFromImage(void* self, void** img);
	[LinkName("QPixmap_Copy")]
	public static extern void* QPixmap_Copy(void* self, c_int x, c_int y, c_int width, c_int height);
	[LinkName("QPixmap_Copy2")]
	public static extern void* QPixmap_Copy2(void* self);
	[LinkName("QPixmap_Scroll")]
	public static extern void QPixmap_Scroll(void* self, c_int dx, c_int dy, c_int x, c_int y, c_int width, c_int height);
	[LinkName("QPixmap_Scroll2")]
	public static extern void QPixmap_Scroll2(void* self, c_int dx, c_int dy, void** rect);
	[LinkName("QPixmap_CacheKey")]
	public static extern c_longlong QPixmap_CacheKey(void* self);
	[LinkName("QPixmap_IsDetached")]
	public static extern bool QPixmap_IsDetached(void* self);
	[LinkName("QPixmap_Detach")]
	public static extern void QPixmap_Detach(void* self);
	[LinkName("QPixmap_IsQBitmap")]
	public static extern bool QPixmap_IsQBitmap(void* self);
	[LinkName("QPixmap_PaintEngine")]
	public static extern void** QPixmap_PaintEngine(void* self);
	[LinkName("QPixmap_OperatorNot")]
	public static extern bool QPixmap_OperatorNot(void* self);
	[LinkName("QPixmap_Metric")]
	public static extern c_int QPixmap_Metric(void* self, QPaintDevice_PaintDeviceMetric param1);
	[LinkName("QPixmap_Fill1")]
	public static extern void QPixmap_Fill1(void* self, void** fillColor);
	[LinkName("QPixmap_CreateHeuristicMask1")]
	public static extern void* QPixmap_CreateHeuristicMask1(void* self, bool clipTight);
	[LinkName("QPixmap_CreateMaskFromColor2")]
	public static extern void* QPixmap_CreateMaskFromColor2(void* self, void** maskColor, Qt_MaskMode mode);
	[LinkName("QPixmap_Scaled3")]
	public static extern void* QPixmap_Scaled3(void* self, c_int w, c_int h, Qt_AspectRatioMode aspectMode);
	[LinkName("QPixmap_Scaled4")]
	public static extern void* QPixmap_Scaled4(void* self, c_int w, c_int h, Qt_AspectRatioMode aspectMode, Qt_TransformationMode mode);
	[LinkName("QPixmap_Scaled22")]
	public static extern void* QPixmap_Scaled22(void* self, void** s, Qt_AspectRatioMode aspectMode);
	[LinkName("QPixmap_Scaled32")]
	public static extern void* QPixmap_Scaled32(void* self, void** s, Qt_AspectRatioMode aspectMode, Qt_TransformationMode mode);
	[LinkName("QPixmap_ScaledToWidth2")]
	public static extern void* QPixmap_ScaledToWidth2(void* self, c_int w, Qt_TransformationMode mode);
	[LinkName("QPixmap_ScaledToHeight2")]
	public static extern void* QPixmap_ScaledToHeight2(void* self, c_int h, Qt_TransformationMode mode);
	[LinkName("QPixmap_Transformed2")]
	public static extern void* QPixmap_Transformed2(void* self, void** param1, Qt_TransformationMode mode);
	[LinkName("QPixmap_FromImage2")]
	public static extern void* QPixmap_FromImage2(void** image, void* flags);
	[LinkName("QPixmap_FromImageReader2")]
	public static extern void* QPixmap_FromImageReader2(void** imageReader, void* flags);
	[LinkName("QPixmap_Load2")]
	public static extern bool QPixmap_Load2(void* self, libqt_string fileName, c_char* format);
	[LinkName("QPixmap_Load3")]
	public static extern bool QPixmap_Load3(void* self, libqt_string fileName, c_char* format, void* flags);
	[LinkName("QPixmap_LoadFromData3")]
	public static extern bool QPixmap_LoadFromData3(void* self, c_uchar* buf, c_uint lenVal, c_char* format);
	[LinkName("QPixmap_LoadFromData4")]
	public static extern bool QPixmap_LoadFromData4(void* self, c_uchar* buf, c_uint lenVal, c_char* format, void* flags);
	[LinkName("QPixmap_LoadFromData22")]
	public static extern bool QPixmap_LoadFromData22(void* self, void** data, c_char* format);
	[LinkName("QPixmap_LoadFromData32")]
	public static extern bool QPixmap_LoadFromData32(void* self, void** data, c_char* format, void* flags);
	[LinkName("QPixmap_Save22")]
	public static extern bool QPixmap_Save22(void* self, libqt_string fileName, c_char* format);
	[LinkName("QPixmap_Save3")]
	public static extern bool QPixmap_Save3(void* self, libqt_string fileName, c_char* format, c_int quality);
	[LinkName("QPixmap_Save23")]
	public static extern bool QPixmap_Save23(void* self, void** device, c_char* format);
	[LinkName("QPixmap_Save32")]
	public static extern bool QPixmap_Save32(void* self, void** device, c_char* format, c_int quality);
	[LinkName("QPixmap_ConvertFromImage2")]
	public static extern bool QPixmap_ConvertFromImage2(void* self, void** img, void* flags);
	[LinkName("QPixmap_Copy1")]
	public static extern void* QPixmap_Copy1(void* self, void** rect);
	[LinkName("QPixmap_Scroll7")]
	public static extern void QPixmap_Scroll7(void* self, c_int dx, c_int dy, c_int x, c_int y, c_int width, c_int height, void** exposed);
	[LinkName("QPixmap_Scroll4")]
	public static extern void QPixmap_Scroll4(void* self, c_int dx, c_int dy, void** rect, void** exposed);
}
